--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-slick": "^0.23.8",
+    "@types/slick-carousel": "^1.6.37",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "sass": "^1.52.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
